# influxdb-cpp-rest

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakeUserPresets.json  IDEAS.md  LICENSE  README.md  Rakefile  Vagrantfile  appveyor.yml  conanfile.py  conanfile.py''  conanfile.txt  docker-compose.win.yml  docker-compose.yml  influxdb-cpp-rest.sln  influxdb.conf  premake5.lua
.github/workflows/: ci.yml  publish-conan.yml
docs/: CXX_STANDARDS.md  benchmarking.md  development.md
influxdb-cpp-rest/: influxdb-cpp-rest.vcxproj  influxdb-cpp-rest.vcxproj.filters  influxdb_raw_db.cpp  influxdb_raw_db.h  main.cpp
scripts/: build.bat  build.sh  download-influxdb.sh  publish-conan-version.sh  push-latest-version.sh  run-db-batch-insert-benchmark.sh  run-demo.bat  run-demo.sh  run-format-benchmark.sh  start-influxdb-native.sh  start-influxdb.bat  start-influxdb.sh  stop-influxdb-native.sh  stop-influxdb.bat  stop-influxdb.sh  tag-version.sh  test.bat  test.sh
src/auth_test/: auth_test.cpp  influxdb.conf
src/benchmark/: CMakeLists.txt  db_batch_benchmark.cpp  db_insert_benchmark.cpp  format_benchmark.cpp
src/demo/: main.cpp
src/influx-c-rest/: influx_c_rest_api.h  influx_c_rest_async.cpp  influx_c_rest_async.h  influx_c_rest_config.cpp  influx_c_rest_config.h  influx_c_rest_lines.cpp  influx_c_rest_lines.h  influx_c_rest_query.cpp  influx_c_rest_query.h
src/influxdb-cpp-rest/: influxdb_config.h  influxdb_http_events.h  influxdb_line.h  influxdb_raw_db.cpp  influxdb_raw_db.h  influxdb_raw_db_utf8.cpp  influxdb_raw_db_utf8.h  influxdb_simple_api.cpp  influxdb_simple_api.h  influxdb_simple_async_api.cpp  influxdb_simple_async_api.h  input_sanitizer.cpp  input_sanitizer.h
src/script/: macrun.sh  test.bat  test.sh
src/test/: fixtures.cpp  fixtures.h  sanitizer_test.cpp  simple_api_test.cpp  test_main.cpp  utf8_client_test.cpp
src/test-shared/: async_c_test.cpp  c_api_test.cpp  test_main.cpp
